package io.iss.commands;

public class ExitCommand implements MenuCommand{
    @Override
    public void execute() {

    }
}
