package io.iss.commands;

public interface MenuCommand {
    void execute();
}
